--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Before University of Washington I was a postdoc at University of Kentucky, and before even that I was a graduate student at the <a href="https://iac.es">Instituto de Astrofísica de Canarias</a> in Tenerife (Spain), where I wrote my thesis on "Gas, dust, and star formation in nearby galaxies".
               </p>
               <p>
-                Outside of work I enjoy running, snowboarding, hiking, and generally anything that gets me out of the house and into the mountains.
+                Outside of work I enjoy running, snowboarding, hiking, and generally anything that gets me out of the house and up to the mountains.
               </p>
               <p style="text-align: center;">
                 <a href="mailto:gallegoj@uw.edu">Email</a> <span class="sep">|</span>
